# borkle

./: '  .gitignore  2  Cargo.toml  Changelog.md  LICENSE  README.md  TODO.md  src.bo  testing.bo
borkle_lib/: hello.dll.exp  hello.dll.lib  hello.rs
bump_tree/: Cargo.toml
bump_tree/src/: lib.rs
examples/: simple.bo
examples/advent_of_code_2020_1/: input.bo  library.bo  library.rs  src.bo
examples/echo_some/: src.bo
examples/gorbitsa/: program.gorbitsa  src.bo
examples/guessing_game/: library.bo  library.rs  src.bo
examples/mandelbrot/: build.bat  complex.bo  library.bo  library.rs  src.bo
examples/polymorphism/: src.bo
examples/testing_stuff/: src.bo
examples/tetris/: src.bo
profile/: Cargo.toml
profile/src/: lib.rs
src/: ast.rs  backend.rs  c_backend.rs  calling_convention.rs  command_line_arguments.rs  compile_units.rs  dependencies.rs  emit.rs  error.rs  errors.rs  execution_time.rs  global_scope.rs  id.rs  interp.rs  intrinsic.rs  ir.rs  layout.rs  lexer.rs  literal.rs  locals.rs  location.rs  logging.rs  main.rs  operators.rs  parser.rs  program.rs  random.rs  self_buffer.rs  thread_pool.rs  tree.rs  type_infer.rs  typer.rs  types.rs
src/backend/: ir.rs  x64.rs
src/emit/: context.rs
src/interp/: instr.rs  macros.rs  stack.rs
src/ir/: emit.rs
src/parser/: ast.rs  context.rs  lexer.rs  token_stream.rs
src/program/: constant.rs  ffi.rs  thread_pool.rs
src/type_infer/: explain.rs  value_sets.rs
src/typer/: ast.rs  infer.rs
syncvec/: Cargo.toml
syncvec/src/: lib.rs  main.rs
tests/: main.bo
tests/aoc/: day1.bo  day2.bo  (+15 more)
