[package]
name = "borkle"
version = "0.1.0"
authors = ["johnm <trolledwoods@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Enables logging
log = []
log_print = []

[profile.release]
debug = true

[dependencies]
profile = { path = "profile/" }
ustr = "0.8.*"
bumpalo = { version = "3.4.0", features = ["boxed"] }
impl_twice = "0.0.3"
parking_lot = "0.10.2"
lazy_static = "1.4.0"
# libloading = "0.6.5"
# libffi-sys = { version = "1.1.0" }
crossbeam = "0.8.0"
